# rust-starter

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: pr-ci.yml  publish.yml  test.yml
