[package]
name = "rust_starter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
futures = "0.3"

  [dependencies.tokio]
  version = "1"
  features = [ "full" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.reqwest]
  version = "0.11.0"
  features = [ "json" ]
