[package]
name = "rust_starter_ab"
version = "0.1.0"
edition = "2021"
description = "Rust starter template"
readme = "README.md"
repository = "https://github.com/antonybudianto/rust-starter"
license = "MIT"
authors = ["Antony Budianto <antonybudianto@gmail.com>"]
keywords = ["rust", "starter"]
exclude = [
  ".github",
  ".env.example",
  ".prettierrc.json",
  "Makefile"
]

[dependencies]
serde_json = "1.0"
futures = "0.3"

  [dependencies.tokio]
  version = "1"
  features = [ "full" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.reqwest]
  version = "0.11.0"
  features = [ "json" ]
